--- a/busybus.html
+++ b/busybus.html
@@ -44,7 +44,7 @@
     <h1>BusyBus</h1>
     <img src="images/busybus/yellowbus.png" alt="mockup image" class="hero" >
     <p>BusyBus is a mobile transportation application designed<br> to help users navigate over-complicated<br>transit systems.<p>
-    <a href="" target="_blank" class="button">View finished prototype</a>
+    <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View finished prototype</a>
   </section>
     <!-- summary and solution-->
   <div class="main">
@@ -66,7 +66,7 @@
         Users don’t appreciate unnecessary ads and unreliable notifications.</p>
         <aside>
         <img src="images/busybus/survey.png" alt="user survey image" class="center">
-        <a href="" target="_blank" class="button">View more</a>
+        <a href="https://docs.google.com/spreadsheets/d/1AuDIjE_LeFvHWjQdIg0y05SwsT7R_9zStSk2qE3CP9o/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
     <!-- info architecture -->
@@ -74,32 +74,32 @@
       <h2>Information Architecture:</h2>
       <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories:</p>
       <img src="images/busybus/users.png" alt="user stories image" class="user">
-      <a href="" target="_blank" class="button">View more</a>
+      <a href="https://docs.google.com/spreadsheets/d/16T6_oNmkekqiU6KiHm3a2rWygTtXUkap_rypvfT_rLY/edit?usp=sharing" target="_blank" class="button">View more</a>
      </section>
     <section class="prototypes">
       <h2>Prototypes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
       <img src="images/busybus/sketch1.png" alt="prototype" class="prototype">
-      <a href="" target="_blank" class="button">View more</a>
+      <a href="https://www.dropbox.com/s/jln6v9rd5yeytzz/Screenshot%202020-01-13%2020.25.57.png?dl=0" target="_blank" class="button">View more</a>
        </section>
     <section class="usability">
       <h2>Usability Tests:</h2>
       <p>After creating the initial sketches, I decided to test three users on the flow of the application. The feedback users gave was that the icons on the application could use more clarity,
          and that the second screen on the application felt cluttered. <br><br>From there, I created a second round of sketches:</p>
          <img src="images/busybus/sketch2.png" alt="prototype" class="prototype2">
-         <a href="" target="_blank" class="button">View more</a>
+         <a href="https://www.dropbox.com/s/itjbhzklfll8s3t/image%20%281%29.png?dl=0" target="_blank" class="button">View more</a>
       </section>
     <section class="mockups">
       <h2>High Fidelity Mockups Version 1:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
       <img src="images/busybus/version1.png" alt="mockup image" class="mockupimage">
-      <a href="" target="_blank" class="button">View more</a>
+      <a href="https://www.dropbox.com/s/z190568mtl328cf/prototype3.png?dl=0" target="_blank" class="button">View more</a>
        </section>
     <section class="mockups">
      <h2>High Fidelity Mockups Version 1:</h2>
      <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
      <img src="images/busybus/version2.png" alt="mockup image" class="mockupimage">
-     <a href="" target="_blank" class="button">View more</a>
+     <a href="https://www.dropbox.com/s/lt37fwppvxk1bm6/image%20%284%29.png?dl=0" target="_blank" class="button">View more</a>
       </section>
     <!-- final project -->
     <section class="final_design">
@@ -107,7 +107,7 @@
       <p>With the final design of BusyBus, I decided to incorporate some more feedback I recieved. I created a visual alert (red) for incoming buses.
         I also adjusted the visual hierarchy of the bus numbers and route names.</p>
       <img src="images/busybus/finalversion.png" alt="final design" class="final">
-      <a href="" target="_blank" class="button">View prototype</a>
+      <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View prototype</a>
     </section>
     <!-- conclusion -->
     <section>
